app/assets/stylesheets/zammad.scss
/* ... */
  .dropdown-menu > li > a span {
    display: block;
  }

  .dropdown-menu .badge {
    padding-left: 10px;
  }

  .dropdown.dropdown--actions {
    li {
      line-height: initial;
      height: auto;
      padding: 11px 15px;
      display: flex;
      align-items: center;
      word-break: break-all;
    }

    .dropdown-iconSpacer,
    .dropdown-selectedSpacer {
      display: flex;
      align-items: center;
    }

    .dropdown-iconSpacer {
      width: 25px;
    }

    .dropdown-selectedSpacer {
      width: 34px;
      margin-left: auto;
      justify-content: flex-end;
      opacity: 0;
      
      .icon {
        fill: white;
      }
      
      &.is-selected {
        opacity: 1;
      }
    }

    a {
      @extend .u-clickable;
      display: flex;
      flex: 1;
      padding: 0 18px;
    }
  }

  .dropdown.dropdown--wide {
    li {
      padding-top: 12px;
      padding-bottom: 12px;
    }
  }

  li.dropdown-header {
    line-height: 36px;
    height: 32px;
  }

.recipientList,
.recipientList-organizationMembers {
  list-style: none;
  padding: 0;
}

.recipientList-entry {
  @extend .u-clickable;
  display: flex;
  align-items: center;
}

  .recipientList-entry .recipientList-iconSpacer {
    width: 20px;
    margin-left: -5px;
    display: flex;
    align-items: center;
    justify-content: center;
  }

  .recipientList-icon {
    width: 16px;
    height: 16px;
    fill: white;
    opacity: 0.2;
  }

  .recipientList--new .recipientList-icon {
    opacity: 1;
  }

  .recipientList-entry:hover .recipientList-icon {
    opacity: 1;
  }

  .recipientList-name {
    color: white;
    margin-left: 10px;
    flex: 1;
    @extend .u-textTruncate;
  }

  .recipientList-arrow {
    fill: white;
    opacity: 0.39;
  }

  .recipientList-entry:hover .recipientList-arrow {
    opacity: 1;
  }

  .recipientList-detail {
    opacity: 0.5;
  }

  .recipientList-icon.plus {
    margin-left: 13px;
  }

  .recipientList--new {
    background: hsl(145,51%,45%);
  }

  .dropdown .recipientList--new:hover {
    background: hsl(147,52%,43%);
  }

  .recipientList-controls,
  .recipientList-controls:hover {
    @extend .u-clickable;
    padding: 0 10px !important;
    background: hsl(206,7%,28%) !important;
    
    & + li {
      box-shadow: 0 1px rgba(255,255,255,.13) inset;
    }
  }

  .recipientList-organizationMembers {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
  }

.userInfo-avatar {
  float: right;
  position: relative;
}

.organizationInfo-avatar {
  @extend .userInfo-avatar;
  padding: 18px 0 0 18px;
}

.userList {
  list-style: none;
  padding: 0;

  li {
    position: relative;
    margin: 10px 0;
  }

  a {
    @extend .u-textTruncate;
    position: absolute;
    top: 10px;
    right: 0px;
    left: 48px;
  }
}

.checkbox.form-group .checkbox {
  margin-top: 0;
  margin-bottom: 15px;
  height: auto;
  padding-top: 3px;
  padding-bottom: 3px;
  background: hsl(210,17%,98%);
}

.checkbox.form-group label {
  padding: 0 2px;
  cursor: default;
}

.checkbox.form-group .controls label {
  padding: 3px 0 3px 20px;
  font: inherit;
  font-size: 13px;
  margin-bottom: 0;
  color: inherit;
  text-transform: inherit;
  letter-spacing: 0;
  @extend .u-clickable;
}

.checkbox.form-group input[type=checkbox] {
  margin-top: 7px;
  vertical-align: bottom;
}

.userSearch-label {
  margin: 11px 10px 0 0;
}

.userSearch .tab:not(.active) {
  background: white;
}

.userSearch {
  margin: 0 0 20px;
}

.userSearch .tabs {
  margin: 0;
}

.nav-tabs {
  border-bottom: none; 
}

.nav-tabs li {
  margin: 0;
}

.nav-tabs > li > a,
.nav-tabs > li > a:hover,
.nav-tabs > li > a:focus {
  background: white;
  border-radius: 0;
  border: 1px solid hsl(0,0%,90%);
  color: hsl(0,0%,70%);
  height: 40px;
  margin: 0;
}

.nav-tabs > li:not(:last-child):not(:only-child) > a {
  border-right: none;
}

.nav-tabs > li:first-child > a {
  border-radius: 5px 0 0 5px;
}

.nav-tabs > li:last-child > a {
  border-radius: 0 5px 5px 0;
}

.nav-tabs > li:only-child > a {
  border-radius: 5px;
}

.nav-tabs > li.active > a,
.nav-tabs > li.active > a:hover,
.nav-tabs > li.active > a:focus {
  background: hsl(206,7%,28%);
  color: white;
  border-color: hsl(0,0%,90%);
}

.main .nav-tabs:first-child {
  margin: 28px 0 50px;
}

.settings-entry {
  margin-bottom: 42px;
  max-width: 700px;
}

.setting-controls {
  margin-top: 14px;
  display: flex;
  justify-content: flex-end;
}

.form-item .form-group {
  margin-bottom: 0;
}

.form-item .form-group + .form-group {
  margin-top: 15px;
}

.form-item + .btn {
  margin-left: 23px;
}

.scrollPageHeader {
  @extend .zIndex-8;
  display: flex;
  align-items: center;
  background: white;
  border-bottom: 1px solid hsl(0,0%,78%);
  height: 64px;
  top: 0;
  left: 0;
  right: 0;
  padding: 0 22px;
  position: absolute;
  transform: translateY(-64px);
}

  .scrollPageHeader small {
    color: hsl(198,19%,72%);
  }

  .scrollPageHeader .ticket-title {
    max-width: initial;
    padding: 0;
    min-width: 0;
    flex: 1;
  }

  .scrollPageHeader h1 {
    font-size: 19px;
    margin: 0 15px;
    @extend .u-textTruncate;
  }


.wizard-logo {
  fill: white;
  margin-left: -25px;
  margin-bottom: 5px;
}

.wizard-slide {
  @extend .hero-unit;
  display: flex;
  flex-direction: column;
  width: 400px;
  padding-bottom: 18px;
  margin-bottom: 20px;
}

.wizard h2 {
  text-align: center;
  border-bottom: 1px solid rgba(0,0,0,.13);
  padding-bottom: 8px;
  margin-bottom: 16px;

  & + p {
    margin-top: 0;
  }
}

.wizard-body {
  flex: 1;
  padding-bottom: 15px;
  
  .form-control {
    min-width: 0;
  }
}

.wizard-controls {
  display: flex;
  margin-top: 15px;
  height: 39px;
}

.wizard-buttonList {
  margin-top: 15px;
  min-width: 200px;
}

p + .wizard-buttonList,
label + .wizard-buttonList {
  margin-top: 5px;
}

.wizard-loadingText {
  text-align: center;
  margin: 0;
}

.wizard-loadingText .loading {
  vertical-align: middle;
  margin-right: 10px;
}
/* ... */

